@@ -43,6 +43,7 @@ public class SlidingMover implements BlockMover
     @SuppressWarnings("deprecation")
     public SlidingMover(BigDoors plugin, World world, double time, Door door, boolean instantOpen, int blocksToMove, RotateDirection openDirection)
     {
+        plugin.getAutoCloseScheduler().cancelTimer(door.getDoorUID());
         this.plugin        = plugin;
         this.world         = world;
         this.door          = door;
@@ -219,24 +220,7 @@ public class SlidingMover implements BlockMover
             plugin.getCommander().setDoorAvailable(door.getDoorUID());
 
         if (!onDisable)
-            goAgain();
-    }
-
-    private void goAgain()
-    {
-        int autoCloseTimer = door.getAutoClose();
-        if (autoCloseTimer < 0 || !door.isOpen())
-            return;
-
-        new BukkitRunnable()
-        {
-            @Override
-            public void run()
-            {
-                plugin.getCommander().setDoorAvailable(door.getDoorUID());
-                plugin.getDoorOpener(door.getType()).openDoor(plugin.getCommander().getDoor(null, door.getDoorUID()), time, instantOpen, false);
-            }
-        }.runTaskLater(plugin, autoCloseTimer * 20);
+            plugin.getAutoCloseScheduler().scheduleAutoClose(door, time, onDisable);
     }
 
     private Location getNewLocation(double xAxis, double yAxis, double zAxis)
